--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,8 @@
             <version>0.8.0</version>
         </dependency>
         <dependency>
-            <groupId>com.hubspot.dropwizard</groupId>
-            <artifactId>dropwizard-guice</artifactId>
-            <version>0.8.0</version>
-        </dependency>
-        <dependency>
             <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-hibernate</artifactId>
+            <artifactId>dropwizard-jdbi</artifactId>
             <version>0.8.0</version>
         </dependency>
         <dependency>
@@ -29,8 +24,18 @@
             <artifactId>dropwizard-migrations</artifactId>
             <version>0.8.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.hubspot.dropwizard</groupId>
+            <artifactId>dropwizard-guice</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
