--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.san.pro</groupId>
-    <artifactId>Bookstore</artifactId>
+    <artifactId>online-bookstore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -33,6 +33,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.34</version>
+        </dependency>
+        <dependency>
+            <groupId>de.svenkubiak</groupId>
+            <artifactId>jBCrypt</artifactId>
+            <version>0.4</version>
         </dependency>
     </dependencies>
 
