--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,11 @@
             <version>5.1.34</version>
         </dependency>
         <dependency>
-            <groupId>de.svenkubiak</groupId>
-            <artifactId>jBCrypt</artifactId>
-            <version>0.4</version>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
