--- a/config.yml
+++ b/config.yml
@@ -6,4 +6,4 @@ database:
   driverClass: com.mysql.jdbc.Driver
   user: root
   password: india@123
-  url: jdbc:mysql://localhost:3306/test
+  url: jdbc:mysql://localhost:3306/online_bookstore
